# llm-finetune-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mlflow.db  pyproject.toml  requirements-sagemaker.txt
.dvc/: config
.github/workflows/: ci.yml  deploy-prod.yml  docker.yml  train.yml
.hypothesis/constants/: 05c9d71633f0442e  0a018476f731b1c4  1535273f5398268c  1fdbb5b34f0bb511  202dcbb4412a7387  217a32dea52bfaca  22d3e39c5bb9a3e5  289ad416d42c5491  32ccd1b0b63e7169  3df305cb393f0346  40cf5e5873b48b5c  446164f19ad4b560  44b1389bbc6d7f3e  44b325d68933b017  509d50e5edc03849  554db92964589801  5867f795bd258850  5a680ee666728e8d  5bf6c7cde3df0ddb  686395939a376214  6da8e93dc951606b  6fd8d09a0bb7b345  7a757e0af2e36761  7cd2e9f867475f51  7d78e0ed44f796fe  7f565e8795cc544a  8a224d74675704bd  8e34ead98888b93e  8f3eaf5e3b9e1344  905a022129ec5003  934f87d46b64db7b  94dcabd7394993de  9b7f632350e1522d  9f66e2d1b728b67b  ab8e2677a2db6619  ac2ac9dfd8ea0cee  b24ff7f5ee4eebd2  b3b2cdc058d2728a  b55bc04977e28052  b89a0f9a1a9e5ee1  (+17 more)
configs/accelerate/: deepspeed_zero3.yaml  fsdp_qlora.yaml  multi_gpu_ddp.yaml  single_gpu.yaml
configs/deployment/: bedrock.yaml  default.yaml  sagemaker_dev.yaml  sagemaker_prod.yaml  sagemaker_staging.yaml
configs/evaluation/: default.yaml  eval_default.yaml
configs/monitoring/: alerts.yaml
configs/templates/: alpaca.jinja2  chatml.jinja2  llama3.jinja2  mistral.jinja2
configs/training/: default.yaml  dora_llama3_8b.yaml  hpo_search.yaml  qlora_llama3_70b.yaml  qlora_llama3_8b.yaml  qlora_llama3_8b_sagemaker.yaml  qlora_mistral_7b.yaml  sagemaker_test.yaml  smoke_test_cpu.yaml  smoke_test_production.yaml
docker/: Dockerfile.serve  Dockerfile.train  docker-compose.local.yml
docs/: disaster_recovery.md  phase10_11_copilot_prompts.md  phase12_13_14_copilot_prompts.md  phase7_8_copilot_prompts.md  phase9_copilot_prompts.md  runbook.md
infra/cdk/: Makefile  README.md  app.py  cdk.context.json  cdk.json  pyproject.toml
infra/cdk/config/: __init__.py  constants.py  environments.py
infra/cdk/constructs/: least_privilege_role.py  pipeline_monitoring.py  secure_bucket.py  training_vpc.py
infra/cdk/infra/cdk/cdk.out/: dev-iam.assets.json  dev-iam.metadata.json  dev-iam.template.json  dev-network.assets.json  dev-network.metadata.json  dev-network.template.json  dev-sagemaker.assets.json  dev-sagemaker.metadata.json  dev-sagemaker.template.json  dev-storage.assets.json  dev-storage.metadata.json  dev-storage.template.json  manifest.json  tree.json
infra/cdk/stacks/: __init__.py  iam_stack.py  network_stack.py  sagemaker_stack.py  storage_stack.py
infra/cdk/tests/: __init__.py  conftest.py  test_iam_stack.py  test_network_stack.py  test_sagemaker_stack.py  test_security_invariants.py  test_storage_stack.py
infra/terraform/: main.tf  outputs.tf  resources.tf  variables.tf
results/smoke_eval/: eval_results.json  eval_results.md
scripts/: build_and_push_ecr.sh  run_training_local.sh  setup_local.sh  submit_sagemaker_job.sh
src/: __init__.py  cli.py
src/config/: __init__.py  environment.py  loader.py  schema.py  settings.py  training.py
src/evaluation/: __init__.py  evaluator.py  (+4 more)
tests/: conftest.py  test_repo_structure.py
(+91 files in other folders)
